change swagger for some
